Add initial homepage markup + styles

--- a/algolib-frontend/src/index.css
+++ b/algolib-frontend/src/index.css
@@ -7,7 +7,9 @@
 
 :root {
     --green: #43B9AA;
+    --bg-green: #3CA89A;
     --black: #000000;
     --font-nav: #323232;
     --font-white: #fff;
+    --hr-charcoal: #4A4A4A;
 }
