--- a/algolib-frontend/src/pages/home/Home.module.css
+++ b/algolib-frontend/src/pages/home/Home.module.css
@@ -1,16 +1,42 @@
+/* INTRO SECTION */
 .intro {
     width: 100%;
     text-align: center;
-    padding: 0 0 5rem;
+    padding: 5rem 0 5rem;
 }
 
+.intro h1 {
+    margin-bottom: 1rem;
+}
+
+.intro button {
+    width: 200px;
+}
+
+.intro button:first-of-type {
+    margin-right: 1rem;
+}
+
+
+/* INFO SECTION */
 .info {
     width: 100%;
-    padding: 10rem;
+    padding: 0rem 10rem 5rem;
 }
 
 .info div {
-    width: 50%;
+    width: auto;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 1rem .5rem;
+    border-bottom: 1px solid var(--hr-charcoal);
+}
+
+.info div img {
+    float: left;
+    margin-right: 2rem;
+    width: 65px;
+    height: 65px;
 }
 
 .info div h2 {
@@ -20,4 +46,52 @@
 
 .info div p {
     font-size: 14px;
+}
+
+
+/* QUOTE SECTION */
+.quotes {
+    width: 100%;
+    background-color: var(--bg-green);
+    padding: 2.5rem;
+    height: fit-content;
+
+    color: var(--font-white)
+}
+
+.quoteIcon {
+    float: left;
+    height: 50px;
+    width: 100px;
+    z-index: 5;
+}
+
+.quotes div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.ppImg{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-left: 1rem;
+}
+
+.quotes p {
+    width: 60%;
+    max-width: 600px;
+    font-weight: bold;
+}
+
+.quotes q {
+    font-weight: normal;
+}
+
+.quotes span {
+    display: block;
+    line-height: normal;
 }
